<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:fillViewport="false"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/file_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="24dp"
            android:paddingBottom="24dp"
            android:text="@string/sample_filename"
            android:textAlignment="center"
            android:textAppearance="?attr/textAppearanceHeadline5" />

        <ImageView
            android:id="@+id/file_detail_image"
            android:layout_width="320dp"
            android:layout_height="320dp"
            android:layout_gravity="center"
            android:contentDescription="@string/image_desc"
            app:srcCompat="@drawable/ic_code_scanner_auto_focus_off" />

        <TextView
            android:id="@+id/file_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/file_body" />

        <Button
            android:id="@+id/save_button"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/save_to_device"/>
        <Button
            android:id="@+id/remove_button"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/remove" />
    </LinearLayout>
</ScrollView>
